# cpp-simple-bitmap

./: CMakeLists.txt  README.md
Bitmap/: CMakeLists.txt
Bitmap/Include/: bitmap.hpp  bitmap_file_header.hpp  bitmap_information_header.hpp  color.hpp  pixel_format.hpp  point.hpp
Bitmap/Source/: bitmap.cpp
TestApp/: CMakeLists.txt
TestApp/Source/: main.cpp
